--- a/styles/style.css
+++ b/styles/style.css
@@ -16,7 +16,7 @@ h1#titulo-principal {
 h2.subtitulo {
     background-color: #353535;
     color: #FFFFE6;
-    width: fit-content;    
+    width: fit-content;
 }
 
 p.paragrafo-justificado {
@@ -24,7 +24,7 @@ p.paragrafo-justificado {
     text-align: justify;
 }
 
-ul.lista-hobbies>li {
+ul.lista-hobbies > li {
     margin: 24px 0;
 }
 
@@ -36,10 +36,6 @@ img.imagem-hobbie {
 
 table.tabela-paises {
     width: fit-content;
-}
-
-table.tabela-paises td {
-    min-width: 200px;
 }
 
 table.tabela-paises tbody tr:nth-child(odd) {
@@ -76,4 +72,16 @@ div.container {
 
 a.link:hover {
     color: #69f;
+}
+
+@media screen and (max-width: 839px) {
+    img.imagem-hobbie {
+        width: 100%;
+        height: 100%;
+        margin: 0 auto;
+    }
+
+    div.container {
+        width: calc(100vw - 8px);
+    }
 }
